--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,5 +6,8 @@ $mobile: 300px;
 $tablet: 700px;
 $desktop: 1000px;
 
+// COLOR
+$mainColor: #DBDEF7;
+
 // FONT FAMILIES 
 $font-family: 'Noto Sans', sans-serif; 
