--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,6 +8,7 @@ $desktop: 1000px;
 
 // COLOR
 $mainColor: #DBDEF7;
+$fontColor: #1F303C;
 
 // FONT FAMILIES 
-$font-family: 'Noto Sans', sans-serif; 
+$font: 'Noto Sans', sans-serif; 
