--- a/scss/devices/home/_mobile.scss
+++ b/scss/devices/home/_mobile.scss
@@ -131,7 +131,6 @@
   // HEADER 
   header {
     display: flex;
-    border: 1px solid black;
     height: 30vh;
     background-image: url('/home_img/header_img.jpg');
     background-position: center;
@@ -144,7 +143,9 @@
       width: 100%;
       background-color: rgba(231, 228, 228, 0.5);
       > aside {
-        row-gap: 1vh;
+        display: flex;
+        padding-left: 2vh;
+        row-gap: 2vh;
         width: 90%;
         color: $fontColor;
       }
@@ -165,6 +166,7 @@
       border-radius: 5px;
       width: 30%;
       height: 5vh;
+      font-weight: 600;
       font-size: 17px;
       &:hover {
         background-color: $fontColor;
