Home: change the name of title

--- a/scss/devices/home/_tablet.scss
+++ b/scss/devices/home/_tablet.scss
@@ -1,6 +1,14 @@
 // TABLET VERSION
 @media (min-width: $tablet) {
   body {
+    > nav {
+      h2 {
+        font-size: 35px;
+      }
+      i {
+        font-size: 45px;
+      }
+    }
     > aside {
       > ul {
         justify-content: space-between;
