Korea-mobile:Assignment section is done

--- a/scss/devices/korea/_mobile.scss
+++ b/scss/devices/korea/_mobile.scss
@@ -309,6 +309,10 @@
         row-gap: 2vh;
         padding: 3%;
       }
+      article {
+        @include flexColumn;
+        text-align: right;
+      }
     }
   }
 }
