--- a/scss/_normalize.scss
+++ b/scss/_normalize.scss
@@ -7,3 +7,24 @@ html {
   padding:0;
   font-family: $font;
 }
+
+main,
+main > section,
+main > section > article,
+footer,
+form {
+    @include flexColumn;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+}
+
+p {
+  line-height: 1.5;
+  color: $fontColor;
+}
