--- a/scss/devices/home/_mobile.scss
+++ b/scss/devices/home/_mobile.scss
@@ -236,7 +236,7 @@
     h3 {
       font-size: 20px;
       font-weight: 600;
-      color: salmon;
+      color: $fontColor;
     }
 
     h4 {
@@ -250,7 +250,7 @@
 
     > section {
       @include flexColumn;
-      width: 95%;
+      width: 85%;
       row-gap: 5vh;
     }
        
@@ -289,7 +289,7 @@
     width: 100%;
     text-align: center; 
     align-items: center;  
-    background-color: #FDEBD0; 
+    background-color: ghostwhite; 
     
     > article {
       @include flexColumn;
@@ -315,6 +315,7 @@
   input, textarea {
     padding: 2vh;
     width: 80%;
+    border: 1px solid dimgray;
   }
   
 
