--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,13 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&family=Nunito+Sans:wght@200;300;400;600;700;800;900&display=swap');
 
 // SCREEN SIZE 
-$mobile: 200px;
-$tablet: 600px;
+$mobile: 300px;
+$tablet: 700px;
 $desktop: 1000px;
 
 // COLOR
-$mainColor: #DBDEF7;
-$fontColor: #1F303C;
+$mainColor: #FEF7F0;
+$fontColor: #6C636D;
+$strongColor:#E6DCC9;
 
 // FONT FAMILIES 
 $font: 'Noto Sans', sans-serif; 
