--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,8 +7,9 @@ $tablet: 600px;
 $desktop: 1000px;
 
 // COLOR
-$mainColor: #DBDEF7;
-$fontColor: #1F303C;
+$mainColor: #FEF7F0;
+$fontColor: #6C636D;
+$strongColor:#E6DCC9;
 
 // FONT FAMILIES 
 $font: 'Noto Sans', sans-serif; 
