--- a/scss/devices/home/_mobile.scss
+++ b/scss/devices/home/_mobile.scss
@@ -177,12 +177,18 @@
   }
   // HEADER END 
   // ABOUT
+  .about,
+  .team,
+  .languages,
+  .method {
+      @include flexColumn;
+  }
+
   .about img {
       width: 25%;
   }
 
   .about {
-      @include flexColumn;
       align-items: center;
       width: 90%;
       padding-top: 5vh;
@@ -191,12 +197,10 @@
           align-items: center;
           row-gap: 2vh;
           text-align: center;
-          // padding-bottom: 10vh;       
-      }
-
-      h6 {
-          border: 2px solid $mainColor;
-          width: 50%;
+          > h6 {
+              border: 2px solid $mainColor;
+              width: 50%;
+          }
       }
 
       span {
@@ -209,8 +213,46 @@
           padding-top: 5vh;
           padding-bottom: 5vh;
       }
+
+      h2 {
+          font-size: 25px;
+          text-align: center;
+          font-weight: 800;
+      }
   }
 
+  .team {
+      row-gap: 2vh;
+      > article {
+          @include flexColumn;
+          row-gap: 5vh;
+          > h3 {
+              color: navy;
+              font-size: 20px;
+          }
+      }
+
+      figure {
+          width: 100%;
+          @include flexColumn;
+          > img {
+              width: 100%;
+              height: 40vh;
+              // border-radius: 10px;
+          }
+
+      }
+
+      figcaption {
+          @include flexColumn;
+          background-color: $mainColor;
+      }
+
+      ul {
+          display: flex;
+          justify-content: center;
+      }
+  }
 
 
   // CONTACT
