--- a/scss/devices/home/_mobile.scss
+++ b/scss/devices/home/_mobile.scss
@@ -184,23 +184,21 @@
       @include flexColumn;
   }
 
-  .about img {
-      width: 25%;
-  }
-
   .about {
       align-items: center;
       width: 90%;
+      row-gap: 3vh;
       padding-top: 5vh;
       > article {  
           @include flexColumn;
           align-items: center;
-          row-gap: 2vh;
+          row-gap: 3vh;
           text-align: center;
-          > h6 {
-              border: 2px solid $mainColor;
-              width: 50%;
-          }
+        }
+        
+      h6 {
+          border: 1px solid $fontColor;
+          width: 60%;
       }
 
       span {
@@ -208,10 +206,10 @@
       }
 
       strong {
-          font-size: 23px;
+          font-size: 22px;
           color: navy;
-          padding-top: 5vh;
-          padding-bottom: 5vh;
+          text-align: center;
+          padding-top: 3vh;
       }
 
       h2 {
@@ -220,6 +218,37 @@
           font-weight: 800;
       }
   }
+
+  .subject {
+      figure {
+          width: 100%;
+          @include flexColumn;
+      }
+
+      img {
+          width: 100%;
+      }
+
+      figcaption {
+          @include flexColumn;
+          align-items: center;
+          row-gap: 3vh;
+      }
+
+      a {
+        color: $strongColor;
+        background-color: navy;
+        width: 35%;
+        text-align: center;
+        padding: 1vh;
+      }
+
+      p {
+        font-weight: 600;
+      }
+  }
+
+  
 
   .team {
       row-gap: 2vh;
@@ -233,14 +262,13 @@
       }
 
       figure {
-          width: 100%;
           @include flexColumn;
-          > img {
-              width: 100%;
-              height: 40vh;
-              // border-radius: 10px;
-          }
+          width: 100%;
+        }
 
+      img {
+          width: 100%;
+          height: 40vh;
       }
 
       figcaption {
