--- a/scss/devices/home/_desktop.scss
+++ b/scss/devices/home/_desktop.scss
@@ -73,75 +73,83 @@
 
 
   // CONTACT
-  .contact {
+  // .contact {
 
-    h2 {
-      font-size: 50px;
-    }
+  //   h2 {
+  //     font-size: 50px;
+  //   }
     
-    h3 {
-      font-size: 30px;
+  //   h3 {
+  //     font-size: 30px;
 
-    }
+  //   }
 
-    small {
-      font-size: 22px;
-    }
+  //   small {
+  //     font-size: 22px;
+  //   }
 
-    > section {
-      column-gap: 4vh;
-    }
+  //   > section {
+  //     column-gap: 4vh;
+  //   }
         
-    ul {
-      row-gap: 5vh;
-    }
+  //   ul {
+  //     row-gap: 5vh;
+  //   }
 
-    i {
-      font-size: 32px;
-    }
-  }
+  //   i {
+  //     font-size: 32px;
+  //   }
+  // }
   
-  form {
-    padding-bottom: 5vh;
-    padding-top: 5vh;
+  // form {
+  //   padding-bottom: 5vh;
+  //   padding-top: 5vh;
     
-    > article {
-      row-gap: 2vh;
-    }
+  //   > article {
+  //     row-gap: 2vh;
+  //   }
 
-    [type="submit"] {
-      width: 50%;
-      padding: 3%;
-      font-size: 20px;
-      transition: .5s;
-        &:hover {
-          color: deepskyblue;
-          background-color: transparent;
-          border: 1px solid deepskyblue;
-        }
-    }
+  //   > aside {
+  //     flex-direction: row;
+      
+  //   }
 
-  }
+  //   [type="submit"] {
+  //     border-radius: 5vh;
+  //     font-size: 24px;
+  //     transition: .5s;
+  //       &:hover {
+  //         color: deepskyblue;
+  //         background-color: transparent;
+  //         border: 1px solid deepskyblue;
+  //       }
+  //   }
 
-  input, textarea {
-    width: 70%;
-    font-size: 20px;
-  }
+  // }
 
-  textarea {
-    min-height: 15vh;
-  }
+  // input, textarea {
+  //   width: 70%;
+  //   font-size: 20px;
+  // }
+
+  // textarea {
+  //   min-height: 15vh;
+  // }
   
 
   /* FOOTER */
   footer {
-    row-gap: 2vh;
+    row-gap: 1vh;
 
     > article {
       flex-direction: row;
-      justify-content: space-around;
-      padding: 2vh;
+      padding: 1vh;
       column-gap: 1vh;
+
+    }
+
+    img {
+      width: 10%;
     }
 
     p {
@@ -150,7 +158,7 @@
       
     }
 
-    > figure {
+    figure {
       column-gap: 3vh;
       row-gap: 1vh;
     }
@@ -206,25 +214,31 @@
   }
 
   .bottombar {
-    align-items: flex-start;
-    padding-top: 4vh;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 4vh;
 
     > article {
-      text-align: left;
+      
+      p {
+        font-size: 26px;
+      }
+      
     }
   
-    p {
-      font-size: 24px;
-      font-weight: 500;
+    > a {
+      display: flex;
+      justify-content: center;
     }
-  
-  }
 
-  [class*="fa-"] {
-    font-size: 28px;
-    transition: .5s;
-        &:hover {
-          color: deepskyblue;
-        }
+    [class*="fa-"] {
+      font-size: 60px;
+      transition: .4s;
+          &:hover {
+            color: deepskyblue;
+          }
+    }
+  
   }
+  
 }
