--- a/scss/devices/home/_tablet.scss
+++ b/scss/devices/home/_tablet.scss
@@ -133,21 +133,35 @@
       column-gap: 1vh;
     }
 
-    p {
-      font-size: 28px;
-      font-weight: 600;
+    // p {
+    //   font-size: 28px;
+    //   font-weight: 600;
       
-    }
+    // }
 
-    > figure {
+    figure {
+      flex-direction: column;
+      align-items: flex-start;
       column-gap: 3vh;
       row-gap: 1vh;
+      width: 30%;
+    }
+
+    img {
+      width: 40%;
+    }
+
+    figcaption {
+      > h2 {
+        font-size: 55px;
+        font-weight: 900;
+      }
+
+      > p {
+        font-size: 26px;
+      }
     }
   
-    h2 {
-      font-size: 60px;
-      font-weight: 900;
-    }
   
     aside {
       > ul {
@@ -177,11 +191,21 @@
 
   .icons {
     > ul {
-      column-gap: 2vh;
+      flex-direction: column;
+      row-gap: 2vh;
+    }
+
+    li {
+      display: flex;
+      justify-content: center;
     }
     
     a {
       font-size: 35px;
+      background-color: whitesmoke;
+      border: 2px solid dimgray;
+      border-radius: 50%;
+      padding: 2vh;
       transition: .5s;
         &:hover {
           color: deepskyblue;
