--- a/scss/devices/home/_mobile.scss
+++ b/scss/devices/home/_mobile.scss
@@ -515,13 +515,14 @@
     }
       
     li {
-      border: 2px solid $fontColor;
-      border-radius: 50%;
-      padding: 2vh;
+      display: flex;
     }
     
     a {
-      font-size: 26px;
+      border: 2px solid $fontColor;
+      border-radius: 60%;
+      padding: 2vh;
+      font-size: 28px;
       color: #192A88 ;
     }
   
