--- a/scss/devices/home/_tablet.scss
+++ b/scss/devices/home/_tablet.scss
@@ -88,21 +88,12 @@
           column-gap: 4vh;
       }
 
-      // figure:first-child {
-      //     background-color: red;
-      // }
-
-      // figure:nth-child(2) {
-      //     background-color: yellow;
-      // }
-
-      // figure:last-child {
-      //     background-color: blue;
-      // }
-
-
       a {
           width: 50%;
+      }
+
+      img {
+          height: 50vh;
       }
   }
 
