Thai html : introduce done

--- a/scss/devices/_mobile.scss
+++ b/scss/devices/_mobile.scss
@@ -1,1 +1,4 @@
-@import './home/mobile';
+// @import './home/mobile';
+// @import './korea/mobile';
+// @import './brazil/mobile';
+@import './thai/mobile';
