--- a/scss/devices/_tablet.scss
+++ b/scss/devices/_tablet.scss
@@ -1,1 +1,4 @@
-@import './home/tablet';
+// @import './home/tablet';
+// @import './korea/tablet';
+// @import './brazil/tablet';
+@import './thai/tablet';
