--- a/scss/devices/_desktop.scss
+++ b/scss/devices/_desktop.scss
@@ -1,1 +1,4 @@
-@import './home/desktop';
+// @import './home/desktop';
+// @import './korea/desktop';
+// @import './brazil/desktop';
+@import './thai/desktop';
