--- a/scss/devices/home/_desktop.scss
+++ b/scss/devices/home/_desktop.scss
@@ -75,6 +75,7 @@
       > article {
           p {
               font-size: 18px;
+              text-align: justify;
               width: 85%;
           }
       }
@@ -92,9 +93,95 @@
       }
   }
 
+  // ABOUT SUBJECT
   .subject {
       a {
         width: 30%;
+      }
+
+      img {
+          height: 50vh;
+      }
+  }
+
+  // ABOUT METHOD
+  .method {
+      > article {
+          flex-wrap: nowrap;
+      }
+
+      aside {
+          height: 60vh;
+      }
+  }
+
+  // ABOUT TEAM
+  .team {
+      > article {
+          width: 100%;
+          justify-content: space-evenly;
+      }
+
+      figure {
+          width: 30%;
+      }
+
+      img {
+          height: 45vh;
+      }
+
+      figcaption {
+          padding: unset;
+          height: 13vh;
+          justify-content: center;
+          position: relative;
+          align-items: center;
+          z-index: 1;
+          > h4 {
+              font-size: 20px;
+          }
+          
+          > aside {
+              @include flexColumn;
+              @include center;
+              row-gap: 1vh;
+              position: absolute;
+              border: 6px solid deepskyblue;
+              z-index: 0;
+              width: 96.7%;
+              height: 0%;
+              bottom: 0%;
+              overflow: hidden;
+              transition: .6s;
+              opacity: 1;
+              &:hover {
+                  opacity: 1;
+                  // bottom: 100%;
+                  height: 90%;
+                  background-color: deepskyblue;
+              }
+              > a {
+                  font-weight: 700;
+                  color: black;
+                  background-color: $strongColor;
+                  padding: 1vh;
+                  border-radius: 5px;
+                  &:hover {
+                      background-color: black;
+                      color: $strongColor;
+                  }
+              }
+          }
+
+          ul {
+              display: flex;
+              column-gap: 4vh;
+          }
+
+          i {
+              color: $strongColor;
+          }
+
       }
   }
 
