Home:color change

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,8 +7,8 @@ $tablet: 600px;
 $desktop: 1000px;
 
 // COLOR
-$mainColor: #FEF7F0;
-$fontColor: #6C636D;
+$mainColor: #6052E2;
+$fontColor: #C89545;
 $strongColor:#E6DCC9;
 
 // FONT FAMILIES 
