Home:color change

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,8 +8,8 @@ $desktop: 1000px;
 
 // COLOR
 $mainColor: #6052E2;
-$fontColor: #C89545;
-$strongColor:#E6DCC9;
+$fontColor: black;
+$strongColor:#ACACAF;
 
 // FONT FAMILIES 
 $font: 'Noto Sans', sans-serif; 
