--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,15 +7,10 @@ $tablet: 700px;
 $desktop: 1000px;
 
 // COLOR
-<<<<<<< HEAD
-$mainColor: #FEF7F0;
-$fontColor: #6C636D;
-$strongColor:#E6DCC9;
-=======
-$mainColor: #6052E2;
+$mainColor: #766cc9;
 $fontColor: black;
 $strongColor:#ACACAF;
->>>>>>> 6a004af2e5532c3f0389559f627bc7c01e907c86
+$aColor : #C89545;
 
 // FONT FAMILIES 
 $font: 'Noto Sans', sans-serif; 
