--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,9 +7,13 @@ $tablet: 600px;
 $desktop: 1000px;
 
 // COLOR
-$mainColor: #FEF7F0;
-$fontColor: #6C636D;
-$strongColor:#E6DCC9;
-
+$mainColor: #023879;
+$fontColor: #aaa4ab;
+// for Background color of A
+$strongColor:#25568E;
+// for Hover color of A
+$hoverColor: #f8b617;
+// for A color
+$aColor: dimgray;
 // FONT FAMILIES 
 $font: 'Noto Sans', sans-serif; 
