--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,7 +8,7 @@ $desktop: 1000px;
 
 // COLOR
 $mainColor: #023879;
-$fontColor: #aaa4ab;
+$fontColor: black;
 // for Background color of A
 $strongColor:#25568E;
 // for Hover color of A
