--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -12,7 +12,7 @@ $fontColor: black;
 // for Background color of A
 $strongColor:#25568E;
 // for Hover color of A
-$hoverColor: #f8b617;
+$hoverColor: deepskyblue;
 // for A color
 $aColor: dimgray;
 // FONT FAMILIES 
