Korea:Mobile is done

--- a/scss/devices/home/_mobile.scss
+++ b/scss/devices/home/_mobile.scss
@@ -243,7 +243,7 @@
 
       a {
         color: $strongColor;
-        background-color: navy;
+        background-color: $mainColor;
         font-weight: 600;
         width: 35%;
         text-align: center;
