--- a/scss/devices/korea/_mobile.scss
+++ b/scss/devices/korea/_mobile.scss
@@ -62,6 +62,52 @@
 
   /* NAV  */
   body {
+    > aside {
+      display: flex;
+      justify-content: space-between;
+      background-color: $mainColor;
+      row-gap: 2vh;
+      width: 100%;
+      height: 10vh;
+      color: $fontColor;
+      > ul {
+        display: flex;
+        width: 50%;
+        font-weight: 600;
+      }
+      > ul:last-child {
+        width: 40%;
+      }
+      li {
+        display: flex;
+        column-gap: 1vh;
+        width: 100%;
+        list-style: none;
+      }
+      a {
+        font-size: 18px;
+        color: whitesmoke;
+        text-decoration: none;
+        transition: .5s;
+      }
+      i {
+        color: whitesmoke;
+        text-decoration: none;
+      }
+      [class*="fa-"]{
+        display: flex;
+        @include center;
+        font-size: 23px;
+        transition: .5s;
+        &:hover {
+          color: deepskyblue;
+        }
+      }
+    }
+  }
+
+  /* NAV  */
+  body {
     > nav {
       display: flex;
       align-items: center;
@@ -94,7 +140,7 @@
     position: absolute;
     cursor: pointer;
     > ul {
-      background-color: $fontColor;
+      background-color: $strongColor;
       width: 100%;
       position: absolute;
     }
@@ -112,7 +158,7 @@
       transition: .5s;
     }
     a:hover {
-      color: black;
+      color: deepskyblue;
       background-color: $mainColor;
     }
   }
@@ -161,7 +207,7 @@
       display: flex;
       @include center;
       background-color: $mainColor;
-      color: $fontColor;
+      color: whitesmoke;
       text-decoration: none;
       border-radius: 5px;
       width: 30%;
@@ -225,7 +271,7 @@
         width: 50%;
         height: 5vh;
         border-radius: 10px;
-        color: $aColor;
+        color: whitesmoke;
         text-decoration: none;
         background-color: $mainColor;
         font-weight: 600;
@@ -247,7 +293,7 @@
       width: 30%;
       height: 4vh;
       border-radius: 5px;
-      color: $aColor;
+      color: whitesmoke;
       text-decoration: none;
       background-color: $mainColor;
       font-weight: 600;
@@ -280,10 +326,14 @@
       width: 95%;
       padding: 2%;
       column-gap: 1vh;
-      background-color: rgb(206, 206, 230);
+      background-color: $strongColor;
+      &:hover {
+        background-color: $mainColor;
+        color: $hoverColor;
+      }
       > i {
         font-size: 30px;
-        color: red;
+        color: $hoverColor;
       }
     }
     > figure:nth-child(even) {
@@ -302,7 +352,7 @@
       justify-content: right;
       flex-direction: row-reverse;
       > i {
-        color: blue;
+        color: $hoverColor;
       }
       > figcaption {
         @include flexColumn;
@@ -351,19 +401,21 @@
       row-gap: 3vh;
       height: 40vh;
       width: 100%;
-      background-color: $mainColor;
+      background-color: #1c65b9;
       &:hover {
-        background-color: $fontColor;
-        color: deepskyblue;
+        background-color: $strongColor;
+        color: $hoverColor;
       }
       > article {
         font-size: 20px;
       }
     }
     h3 {
+      color: whitesmoke;
       font-size: 25px;
     }
     h4 {
+      color: whitesmoke;
       font-size: 20px;
     }
     section {
@@ -377,13 +429,13 @@
         width: 25%;
         height: 4vh;
         border-radius: 5px;
-        color: $aColor;
+        color: black;
         text-decoration: none;
-        background-color: $mainColor;
+        background-color: whitesmoke;
         font-weight: 600;
         &:hover {
-          color: deepskyblue;
-          background-color: $fontColor;
+          color: $hoverColor;
+          background-color: $strongColor;
         }
       }
     }
