--- a/scss/devices/korea/_mobile.scss
+++ b/scss/devices/korea/_mobile.scss
@@ -41,51 +41,6 @@
       }
       a {
         font-size: 18px;
-        color: $fontColor;
-        text-decoration: none;
-        transition: .5s;
-      }
-      i {
-        text-decoration: none;
-      }
-      [class*="fa-"]{
-        display: flex;
-        @include center;
-        font-size: 23px;
-        transition: .5s;
-        &:hover {
-          color: deepskyblue;
-        }
-      }
-    }
-  }
-
-  /* NAV  */
-  body {
-    > aside {
-      display: flex;
-      justify-content: space-between;
-      background-color: $mainColor;
-      row-gap: 2vh;
-      width: 100%;
-      height: 10vh;
-      color: $fontColor;
-      > ul {
-        display: flex;
-        width: 50%;
-        font-weight: 600;
-      }
-      > ul:last-child {
-        width: 40%;
-      }
-      li {
-        display: flex;
-        column-gap: 1vh;
-        width: 100%;
-        list-style: none;
-      }
-      a {
-        font-size: 18px;
         color: whitesmoke;
         text-decoration: none;
         transition: .5s;
@@ -105,7 +60,6 @@
       }
     }
   }
-
   /* NAV  */
   body {
     > nav {
@@ -156,6 +110,7 @@
       text-decoration: none;
       font-weight: 700;
       transition: .5s;
+      border-bottom: 1px solid black;
     }
     a:hover {
       color: deepskyblue;
