Add Shareable folder

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,9 @@
 @import './normalize';
 
 
+// NAVI AND FOOTER 
+@import './shareable/navi';
+@import './shareable/footer';
 
 // VERSION
 @import './devices/mobile';
