--- a/scss/shareable/_navi.scss
+++ b/scss/shareable/_navi.scss
@@ -1,4 +1,21 @@
 @media (min-width: $mobile) {
+
+  body,
+  header > section > aside {
+    @include flexColumn;
+  }
+  
+  body > nav > aside,
+  body > aside,
+  body > aside > ul,
+  body > aside li {
+    @include center;
+  }
+  main {
+    align-items: center;
+    row-gap: 12vh;
+  }
+  
   body {
     > aside {
       display: flex;
