--- a/scss/shareable/_footer.scss
+++ b/scss/shareable/_footer.scss
@@ -17,7 +17,7 @@
             row-gap: 4vh;
             p {
                 font-size: 18px;
-                color: #192A88;
+                color: $mainColor;
             }
         
         }
@@ -56,7 +56,7 @@
         h3 {
             font-size: 26px;
             font-style: italic;
-            color: $fontColor;
+            color: $mainColor;
         }
   
         section {
@@ -80,7 +80,7 @@
             border-radius: 60%;
             padding: 2vh;
             font-size: 28px;
-            color: #192A88 ;
+            color: $mainColor ;
         }
     
     }
@@ -94,10 +94,11 @@
   
         p {
             font-size: 18px;
+            color: $fontColor;
         }
     
         a {
-            color: #192A88;
+            color: $aColor;
         }
     
         > a {
@@ -189,12 +190,12 @@
         a {
             font-size: 35px;
             background-color: whitesmoke;
-            border: 2px solid dimgray;
+            border: 2px solid $aColor;
             border-radius: 50%;
             padding: 2vh;
             transition: .5s;
             &:hover {
-                color: deepskyblue;
+                color: $hoverColor;
             }
         }
   
@@ -219,7 +220,7 @@
         font-size: 28px;
         transition: .5s;
         &:hover {
-            color: deepskyblue;
+            color: $hoverColor;
         }
     }
 
@@ -273,7 +274,7 @@
             }
           
             a:hover {
-                color: deepskyblue;
+                color: $hoverColor;
                 
             }
     
@@ -299,7 +300,7 @@
             font-size: 26px;
             transition: .5s;
             &:hover {
-                color: deepskyblue;
+                color: $hoverColor;
                 background-color: transparent ;
             }
         }
@@ -324,7 +325,7 @@
             }
 
             a:hover {
-                color: deepskyblue;
+                color: $hoverColor;
             }
         
         }
@@ -338,8 +339,9 @@
         > [class*="fa-"] {
             font-size: 60px;
             transition: .5s;
+            color: whitesmoke;
             &:hover {
-                color: deepskyblue;
+                color: $hoverColor;
             }
         }
     }
